# weatherLLM

./: .env  .gitignore  README.md  get_weather.py  main.py  pyproject.toml
core/: china_tools.py  model.py  tools.py  weather.py
core/tools/: china_weather_tools.py  foreign_weather_tools.py
files/: prompt.txt
settings/: __init__.py  logger_setting.py  settings.py
